Fix jump-to-week buttons on mobile views

--- a/app/shared/resource-calendar/_resource-calendar.scss
+++ b/app/shared/resource-calendar/_resource-calendar.scss
@@ -4,7 +4,8 @@
   $booked-color: $red;
 
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: center;
   margin: 30px auto;
 
   &__icon {
@@ -17,6 +18,7 @@
     padding: 0;
     margin: 0;
     width: 40px;
+    height: 40px;
     
     &--prev {
       @include icon-angle-left($black);
@@ -209,5 +211,9 @@
         padding: 20px;
       }
     } 
+    @media (max-width: $screen-xs-max) {
+      order: -1;
+      width: 100%;
+    }
   }
 }
